--- a/references.bib
+++ b/references.bib
@@ -377,6 +377,18 @@
   note =	 {Accessed: 2023-02-05}
 }
 
+@misc{yaqd-control,
+ title = {yaqd-control},
+ howpublished = {\url{https://pypi.org/project/yaqd-control}},
+ note = {Accessed: 2022-10-02}
+}
+
+@misc{yaqd-control-conda,
+ title = {yaqd-control},
+ howpublished = {\url{https://anaconda.org/conda-forge/yaqd-control}},
+ note = {Accessed: 2022-10-02}
+}
+
 @misc{tokei,
   title =	 {{Tokei}},
   howpublished = {\url{https://github.com/XAMPPRocky/tokei}},
