remove reference to gage

--- a/paper.tex
+++ b/paper.tex
@@ -156,7 +156,7 @@ We have carefully defined \yaq{} traits to maximize interoperability while not e
 New traits can be discussed by the community through the yaq enhancement proposal system.
 It's crucial that multiple hardware interface examples be considered when defining traits.
 Configuration that is unique to a single interface is best handled through protocol-specific messages.
-For example, our protocol for interfacing with data acquisition cards from Gage provides a message for setting the segment count.
+For example, our protocol for interfacing with a specific data acquisition card provides a message for setting the segment count.
 Unique messages are avaliable through script-based and graphical clients, but usage of such messages in scripts naturally limits portability.
 
 We now describe how the \yaq{} architecture addresses the three hardware interface barriers described at the beginning of this section.
