pymeasure citation, use word software

--- a/paper.tex
+++ b/paper.tex
@@ -227,7 +227,7 @@ At the bottom, we graphically represent the integration between \yaq{} and the B
 Bluesky provides a powerful orchestration layer for conducting and recording data for a wide variety of experimental procedures.
 Bluesky has no built-in hardware interface support, instead relying on packages to create hardware-interfaces that are compatible with their Hardware Protocol defintions.
 \texttt{yaqc-bluesky}\footnote{\texttt{yaqc-bluesky} available on PyPI at https://pypi.org/project/yaqc-bluesky/} is a specialized client which adapts any \yaq{} protocol into Bluesky's Hardware Protocol.
-Similar translation layers could be built for a variety of orchestration layers such as PyMoDAQ\cite{WeberSebastien2021a}, Instrumental\cite{Bogdanowicz2022}, or TRSpectrometer\cite{trspectrometer}.
+Similar translation layers could be built for a variety of orchestration software such as PyMoDAQ\cite{WeberSebastien2021a}, PyMeasure\cite{pymeasure}, or TRSpectrometer\cite{trspectrometer}.
 
 All three types of clients represented in Figure \ref{fig:foundation} have been shown addressing the same three hardware peripherals.
 All types of clients can be used simultaneously to interact with the same instrument in different modes.
