--- a/references.bib
+++ b/references.bib
@@ -304,11 +304,25 @@
   doi =          {10.1146/annurev-physchem-032210-103551}
 }
 
+@misc{jsonrpc,
+  title =        {JSON-RPC 2.0 Specification},
+  year =         2013,
+  url =          {https://www.jsonrpc.org/specification},
+  note =         {Accessed: 2023-02-08}
+}
+
 @manual{modbus,
   title =        {MODBUS Application Protocol Specification},
   year =         2012,
   organization = {Modbus},
   version =      {V1.1b3}
+}
+
+@misc{msgpack,
+  title =        {msgpack},
+  url =
+                  {https://github.com/msgpack/msgpack/blob/master/spec.md},
+  note =         {ACcessed: 2023-02-08}
 }
 
 @misc{nidaqmx,
@@ -317,6 +331,14 @@
   url =
                   {https://www.ni.com/en-us/support/documentation/supplemental/06/getting-started-with-ni-daqmx--main-page.html},
   note =         {Accessed: 2022-10-02}
+}
+
+@misc{normative_types,
+  title =        {EPICS Normative Types Specification},
+  year =         2019,
+  url =
+                  {https://docs.epics-controls.org/en/latest/specs/Normative-Types-Specification.html/},
+  note =         {Accessed: 2023-02-08}
 }
 
 @manual{picam,
@@ -365,36 +387,6 @@
   note =         {Accessed: 2022-11-06}
 }
 
-@misc{yaqd_andor,
-  title =        {{yaqd-andor}},
-  howpublished = {\url{https://pypi.org/project/yaqd-andor}},
-  note =         {Accessed: 2023-02-05}
-}
-
-@misc{yaqd_pi,
-  title =        {{yaqd-pi}},
-  howpublished = {\url{https://github.com/yaq-project/yaqd-pi}},
-  note =         {Accessed: 2023-02-05}
-}
-
-@misc{yaqd-control,
-  title =        {yaqd-control},
-  howpublished = {\url{https://pypi.org/project/yaqd-control}},
-  note =         {Accessed: 2022-10-02}
-}
-
-@misc{yaqd-control-conda,
-  title =        {yaqd-control},
-  howpublished = {\url{https://anaconda.org/conda-forge/yaqd-control}},
-  note =         {Accessed: 2022-10-02}
-}
-
-@misc{tokei,
-  title =        {{Tokei}},
-  howpublished = {\url{https://github.com/XAMPPRocky/tokei}},
-  note =         {Accessed: 2023-02-05}
-}
-
 @manual{scpi,
   title =        {Standard Commands for Programmable Instruments
                   (SCPI)},
@@ -411,6 +403,12 @@
   organization = {Thorlabs}
 }
 
+@misc{tokei,
+  title =        {{Tokei}},
+  howpublished = {\url{https://github.com/XAMPPRocky/tokei}},
+  note =         {Accessed: 2023-02-05}
+}
+
 @misc{trspectrometer,
   author =       {Tapping, Patrick},
   title =        {{TRSpectrometer} Documentation},
@@ -419,10 +417,26 @@
   note =         {Accessed: 2022-10-02}
 }
 
-@misc{normative_types,
-  title =        {EPICS Normative Types Specification},
-  year =         2019,
-  url =
-                  {https://docs.epics-controls.org/en/latest/specs/Normative-Types-Specification.html/},
-  note =         {Accessed: 2022-02-08}
+@misc{yaqd-control,
+  title =        {yaqd-control},
+  howpublished = {\url{https://pypi.org/project/yaqd-control}},
+  note =         {Accessed: 2022-10-02}
+}
+
+@misc{yaqd-control-conda,
+  title =        {yaqd-control},
+  howpublished = {\url{https://anaconda.org/conda-forge/yaqd-control}},
+  note =         {Accessed: 2022-10-02}
+}
+
+@misc{yaqd_andor,
+  title =        {{yaqd-andor}},
+  howpublished = {\url{https://pypi.org/project/yaqd-andor}},
+  note =         {Accessed: 2023-02-05}
+}
+
+@misc{yaqd_pi,
+  title =        {{yaqd-pi}},
+  howpublished = {\url{https://github.com/yaq-project/yaqd-pi}},
+  note =         {Accessed: 2023-02-05}
 }
