prior art portability

--- a/paper.tex
+++ b/paper.tex
@@ -261,6 +261,7 @@ First, because daemons are separate and portable programs, the development effor
 Often, researchers can download an existing daemon rather than writing a new one.
 Second, \yaq{} daemon development can be performed separately from the particulars of any individual client.
 Often, this separation allows initial hardware enablement work to be done on a researchers personal machine before the new hardware peripheral is installed in the instrument.
+Separability, portability, and distributed development are advantages common to many open-source hardware interface projects.
 Third, when developing trait-compliant protocols, it becomes easy to design and fully test your hardware interface.
 Traits are unambiguous and well-described, making an obvious target for development.
 Tooling exists to verify full trait compliance, for example you can use \texttt{yaqc-qtpy} to provide a graphical program to interact with your hardware immediately.
