--- a/references.bib
+++ b/references.bib
@@ -369,6 +369,12 @@
   note =         {Accessed: 2022-11-06}
 }
 
+@misc{pyqtgraph,
+ title = {PyQtGraph: Scientific Graphics and GUI Library for Python},
+ howpublished = {\url{http://pyqtgraph.org/}},
+ note = {Accessed: 2022-10-02}
+}
+
 @misc{pyserial,
   title =        {{PySerial}},
   howpublished = {\url{https://pypi.org/project/pyserial}},
